
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.0.9 Beta 5 - 2009-10-08
---------------------------------
* FIX: "SuRun /SYSMENUHOOK" caused 100% CPU load on one CPU core
* FIX: Pressing <ENTER> after Install or Update caused to run install or 
    update for another time
* FIX: Tray icon disappeared when "SuRun /SYSMENUHOOK" was started "too early"

SuRun 1.2.0.9 Beta 4 - 2009-10-08
---------------------------------
* FIX: "SuRun /RunAs" now runs processes as limited user for UAC-Admins
* FIX: Tray icon sometimes did not close on SuRun Uninstall/Update
* FIX: Fast clicking or pressing <ENTER> on Install or Update caused to run 
    install or update twice

SuRun 1.2.0.9 Beta 3 - 2009-10-06
---------------------------------
* CHG: SuRun handles RunAs verb for ShellExecute/~Ex when "Replace RunAs with 
    SuRuns RunAs" is activated (Windows 5 only!)

SuRun 1.2.0.9 Beta 2 - 2009-10-09
---------------------------------
* NEW: SuRun remembers the last /RunAs user
* CHG: SuRuns Installer sets the focus to "Logoff"/"Restart" after Installation

SuRun 1.2.0.9 Beta 1 - 2009-10-09
---------------------------------
* CHG: On Windows 7 SuRun does not support and Display "Start as Administrator"
    on the control panel and the recycle bin. Also SuRun does not display 
    "(Re)start as Administrator" in Explorer's system menu
* FIX: HideAppStartCursor() caused InstallSuRun on Win7 with Aero to terminate

SuRun 1.2.0.8 - 2009-09-23
--------------------------
* renamed SuRun 1.2.0.8 Beta 1 to SuRun 1.2.0.8

SuRun 1.2.0.8 Beta 1 - 2009-09-22
---------------------------------